--- a/index.html
+++ b/index.html
@@ -24,31 +24,31 @@
         <h2>Primeiro, seu prato</h2>
         <div class="container">
           <div class="contentCard">
-            <div id="frango" class="card prato1" onclick="selecionarComidas(this), escolherPrato(this)">
+            <div data-test="dish" id="frango" class="card prato1" onclick="selecionarComidas(this), escolherPrato(this)">
               <div class="produtos">
                 <img src="./imagens/frango.png" alt="">
-                <h3>Frango Yin Yang</h3>
+                <h3 data-teste="item-name">Frango Yin Yang</h3>
                 <p>Um pouco de batata,</p>
                 <p>Um pouco de salada</p>
-                <div class="preco"><h4>R$ 33,90</h4><div class=""><img class="vector" src="./imagens/Vector.png" alt=""></div></div>
+                <div class="preco"><h4 data-teste="item-price">R$ 33,90</h4><div class=""><img class="vector" src="./imagens/Vector.png" alt=""></div></div>
               </div>
             </div>
-            <div id="Lasanha" class="card prato2" onclick="selecionarComidas(this), escolherPrato(this)">
+            <div data-test="dish" id="Lasanha" class="card prato2" onclick="selecionarComidas(this), escolherPrato(this)">
               <div class="produtos">
                 <img src="./imagens/lasanha.jpg" alt="">
-                <h3>Lasanha</h3>
+                <h3 data-teste="item-name">Lasanha</h3>
                 <p>molho de tomate,</p>
                 <p>presunto, queijo e carne</p>
-               <div class="preco"><h4>R$ 26,90</h4><div class="vector"><img src="./imagens/Vector.png" alt=""></div></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 26,90</h4><div class="vector"><img src="./imagens/Vector.png" alt=""></div></div>
               </div>
             </div>
-            <div id="Salmao" class="card prato3" onclick="selecionarComidas(this), escolherPrato(this)">
+            <div data-test="dish" id="Salmao" class="card prato3" onclick="selecionarComidas(this), escolherPrato(this)">
               <div class="produtos">
                 <img src="./imagens/salmao.jpg" alt="">
-                <h3>Salmao</h3>
+                <h3 data-teste="item-name">Salmao</h3>
                 <p>Salmao delicioso,</p>
                 <p>Recheado, Saboroso</p>
-               <div class="preco"><h4>R$ 20,90</h4><div class="vector"><img src="./imagens/Vector.png" alt=""></div></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 20,90</h4><div class="vector"><img src="./imagens/Vector.png" alt=""></div></div>
               </div>
             </div>
           </div>
@@ -56,31 +56,31 @@
         <h2>Agora, sua bebida</h2>
         <div class="container food">
           <div class="contentCard">
-            <div id="coca_lata" class="card bebida1" onclick="selecionarBebidas(this), escolherBebida(this)">
+            <div data-test="drink" id="coca_lata" class="card bebida1" onclick="selecionarBebidas(this), escolherBebida(this)">
               <div class="produtos">
                 <img src="./imagens/coca.png" alt="">
-                <h3>Coquinha gelada</h3>
+                <h3 data-teste="item-name">Coquinha gelada</h3>
                 <p>Lata 350ml</p>
                 <p></p>
-               <div class="preco"><h4>R$ 5,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 5,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
               </div>
             </div>
-            <div id="fanta_lata" class="card bebida2" onclick="selecionarBebidas(this), escolherBebida(this)">
+            <div data-test="drink" id="fanta_lata" class="card bebida2" onclick="selecionarBebidas(this), escolherBebida(this)">
               <div class="produtos">
                 <img src="./imagens/fanta.jpg" alt="">
-                <h3>Fanta geladinha</h3>
+                <h3 data-teste="item-name">Fanta geladinha</h3>
                 <p>Lata 350ml</p>
                 <p></p>
-               <div class="preco"><h4>R$ 4,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 4,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
               </div>
             </div>
-            <div id="soda_lata" class="card bebida3" onclick="selecionarBebidas(this), escolherBebida(this)">
+            <div data-test="drink" id="soda_lata" class="card bebida3" onclick="selecionarBebidas(this), escolherBebida(this)">
               <div class="produtos">
                 <img src="./imagens/soda.jpg" alt="">
-                <h3>Soda geladinha</h3>
+                <h3 data-teste="item-name">Soda geladinha</h3>
                 <p>Lata 350ml</p>
                 <p></p>
-               <div class="preco"><h4>R$ 3,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 3,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -88,31 +88,31 @@
         <h2>Por fim, sua sobremesa</h2>
         <div class="container food">
           <div class="contentCard">
-            <div id="Pudim" class="card sobremesa1" onclick="selecionarSobremesa(this), escolherSobremesa(this)">
+            <div data-test="dessert" id="Pudim" class="card sobremesa1" onclick="selecionarSobremesa(this), escolherSobremesa(this)">
               <div class="produtos">
                 <img src="./imagens/pudim.png" alt="">
-                <h3>Pudim</h3>
+                <h3 data-teste="item-name">Pudim</h3>
                 <p>Apenas pudim</p>
                 <p></p>
-               <div class="preco"><h4>R$ 11,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 11,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
               </div>
             </div>
             <div id="Bolo" class="card sobremesa2" onclick="selecionarSobremesa(this), escolherSobremesa(this)">
               <div class="produtos">
                 <img src="./imagens/bolo.jpg" alt="">
-                <h3>Bolo</h3>
+                <h3 data-teste="item-name">Bolo</h3>
                 <p>Delioco bolo de chocolate</p>
                 <p></p>
-               <div class="preco"><h4>R$ 22,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 22,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
               </div>
             </div>
             <div id="Torta" class="card sobremesa3" onclick="selecionarSobremesa(this), escolherSobremesa(this)">
               <div class="produtos">
                 <img src="./imagens/torta.jpg" alt="">
-                <h3>Torta</h3>
+                <h3 data-teste="item-name">Torta</h3>
                 <p>Torta de ganache</p>
                 <p></p>
-               <div class="preco"><h4>R$ 14,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
+               <div class="preco"><h4 data-teste="item-price">R$ 14,90</h4><img class="vector ocultar" src="./imagens/Vector.png" alt=""></div>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
       </div>
     </main>
     <footer>
-      <button class="Fazer_pedido" onclick=" habilitarBotao(this), menssagemWapp()" disabled> Selecione os 3 itens <br>
+      <button data-teste="order-btn" class="Fazer_pedido" onclick=" habilitarBotao(this), menssagemWapp()" disabled> Selecione os 3 itens <br>
         para fechar o pedido</button>
         <div class="opacidade_conta ocultar">
           <div class="valor_conta ocultar">
